package edu.hitsz.prop;
/**
 * @author xu
 */
public class BloodProp extends AbstractProp{
    public BloodProp(int  locationX, int locationY, int speedX, int speedY){
        super(locationX, locationY, speedX, speedY);
        this.propkind = 1;
    }

}
