@startuml
'https://plantuml.com/class-diagram

class Game

interface PropFactory {
    + create(int x,int y):AbstractProp
}

abstract class AbstractProp
{
    - propkind
    + AbstractProp(int locationX, int locationY, int speedX, int speedY):void
    + getPropkind():int
}

Game ..> PropFactory
Game ..> AbstractProp

PropFactory <|.. BloodFactory
PropFactory <|.. BombFactory
PropFactory <|.. FireFactory
BloodFactory ..> BloodProp:create
FireFactory ..> FireProp:create
BombFactory ..> BombProp:create

AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- FireProp

class BloodFactory {
    + create(int x,int y):BloodProp
}

class FireFactory {
    + create(int x,int y):FireProp
}

class BombFactory {
    + create(int x,int y):BombProp
}

class FireProp {
    - propkind
    + FireTool(int locationX, int locationY, int speedX, int speedY):void
}

class BloodProp {
    - propkind
    + BloodTool(int locationX, int locationY, int speedX, int speedY):void
}

class BombProp {
   - propkind
   + BombProp(int locationX, int locationY, int speedX, int speedY):void
}

@enduml